# whats_that_code

./: .dockerignore  .editorconfig  .env_example  .gitignore  .pre-commit-config.yaml  .pydoctest.json  .pylintrc  .pylintrc_spell  .pylintrc_tests  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  build.py  mkdocs.yml  private_dictionary.txt  pyproject.toml  tox.ini
.config/: .flake8  .license_rules  .pylintrc  .pylintrc_scripts  .pylintrc_test  .pynt  Dockerfile  docker.sh  dockerw.sh  reqs.txt  requirements-dev-tox.txt  requirements-dev.txt  requirements.txt  requirements_for_safety.txt  run_with_docker.sh  spelling.dic  vendorize.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  create_draft_release.yml  publish_to_pypi.yml  release.yml  tox.yml
corpus/: MANIFEST.json  split.json
docs/: CHANGES.md  CONTRIBUTING.md  Data.md  TODO.md  accuracy.md  changelog.md  contributing.md  how_it_works.md  index.md  installation.md  prior_art.md  requirements.txt  usage.md
navio/: LICENSE.txt  __main__.py  meta_builder.py
navio/builder/: __init__.py  _nb.py
navio/builder/tests/: test_nb.py
navio/builder/tests/build_scripts/: annotation_misuse_1.py  annotation_misuse_2.py  annotation_misuse_3.py  build_with_params.py  default_task_and_import_dependencies.py  dependencies.py  options.py  runtime_error.py  simple.py
navio_tasks/: README.md  __init__.py  build_state.py  clean.py  cli_commands.py  file_system.py  network.py  output.py  settings.py  system_info.py  utils.py
navio_tasks/commands/: README.md  cli_bandit.py  cli_compile_py.py  cli_detect_secrets.py  cli_django_tests.py  cli_flake8.py  cli_get_secrets.py  cli_go_gitleaks.py  cli_mypy.py  cli_npm_pyright.py  cli_pylint.py  cli_pyt.py  cli_pytest.py  cli_tox.py  lib_dodgy.py
navio_tasks/dependency_commands/: cli_installs.py  cli_liccheck.py  cli_pin_dependencies.py  cli_pip.py  cli_safety.py
navio_tasks/deprecated_commands/: README.md  cli_check_manifest.py  cli_pyroma.py  cli_setup_py.py
navio_tasks/mutating_commands/: README.md  cli_black.py  cli_isort.py  cli_jiggle_version.py  cli_npm_prettier.py  cli_precommit.py  cli_pyupgrade.py
navio_tasks/non_breaking_commands/: README.md  cli_mccabe.py  cli_scspell.py  cli_sonar.py  cli_vulture.py
navio_tasks/non_py_commands/: cli_openapi.py  cli_yamllint.py
navio_tasks/packaging_commands/: README.md  __init__.py  cli_poetry_package.py  cli_twine.py
navio_tasks/pure_reports/: README.md  cli_gitchangelog.py  cli_pygount.py  cli_sphinx.py
scripts/: api_snapshot.py  basic_checks.sh  bench.py  build_dataset.py  evaluate.py  examples.py  gen_characterization.py  get_most_popular.py  split_dataset.py
spec/: TODO.md  accuracy_log.md  api_surface.json  eval_baseline.json  eval_with_parsers.json  phase0_findings.md  phase2_notes.md  phase3_notes.md  phase4_notes.md  spec.md
test/data/characterization/: expected.json
test/data/characterization/bash/: deploy.sh
test/data/characterization/c/: hello.c
test/data/characterization/cpp/: hello.cpp
test/data/characterization/csharp/: Hello.cs
test/data/characterization/html/: index.html
test/data/characterization/java/: Main.java
test/data/characterization/javascript/: app.js
test/data/characterization/json/: data.json
test/data/characterization/kotlin/: Main.kt
test/data/characterization/lua/: script.lua
test/data/characterization/perl/: script.pl
test/data/characterization/php/: index.php
test/data/characterization/python/: comprehension.py  hello.py
test/data/characterization/ruby/: hello.rb
test/data/characterization/rust/: main.rs
test/data/characterization/scala/: Main.scala
test/data/characterization/sql/: query.sql
test/data/characterization/swift/: main.swift
test/data/characterization/typescript/: app.ts
test/data/characterization/xml/: config.xml
test/data/characterization/yaml/: config.yaml
test/test_fast/: test_characterization.py  test_election_coverage.py  test_extension_based.py  test_label_registry.py  test_language_guessing.py  test_main.py  test_options.py  test_parser_detect.py  test_parsing_based.py  test_regex_fast_parity.py  test_shebang_based.py  test_tag_based.py
test/test_slow/: test_classify_all.py
whats_that_code/: __main__.py  _version.py  codex_markers.py  election.py  extension_based.py  guess_by_code_and_tags.py  guess_by_popularity.py  keyword_based.py  known_languages.py  languages.py  options.py  parser_detect.py  parsing_based.py  pygments_based.py  regex_based.py  shebang_based.py  tag_based.py  tags_data.py
