[tool.poetry]
name = "whats_that_code"
version = "0.1.6"
description = "Guess programming language from a string or file."
authors = ["Matthew Martin <matthewdeanmartin@gmail.com>"]
keywords = ["language detection","programming language detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
include = [
    "whats_that_code/**/*.py",
    "whats_that_code/**/*.md",
    "whats_that_code/**/*.txt",
    "whats_that_code/**/*.html",
    "whats_that_code/**/*.jinja",
]
exclude = [

]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matthewdeanmartin/whats_that_code"
homepage = "https://github.com/matthewdeanmartin/whats_that_code"
documentation ="https://github.com/matthewdeanmartin/whats_that_code"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/matthewdeanmartin/whats_that_code/issues"
"Change Log" = "https://github.com/matthewdeanmartin/whats_that_code/blob/main/docs/CHANGES.md"

[tool.poetry.scripts]
#guess_that_code = 'whats_that_code.__main__:main'

[tool.poetry.dependencies]
python = "^3.6"
pyrankvote = "*"
defusedxml = "*"
pygments = "*"

[tool.poetry.dev-dependencies]
pytest = "==6.0.1"
pytest-cov = ">=2.10.1"
pytest-timeout = "*"
pytest-xdist = ">=2.1.0"
pip-check = "==2.6"
pynt = "==0.8.2"
pynt-contrib = "==0.2.0"
checksumdir = "==1.1.7"
requests = "==2.22.0"
dodgy = "==0.2.1"
gitchangelog = "==3.0.4"
liccheck = "==0.4.3"
psutil = "==5.6.7"
pebble = "==4.5.0"
python-dotenv = "==0.11.0"
gitpython = "*"
sshtunnel = "*"
ifaddr = "*"
vendorize = "*"
beautifulsoup4="*"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]
# don't know how to do this in toml
#addopts = "--strict-markers"
#markers =
#	slow: marks tests as slow (deselect with '-m "not slow"')
#	fast: marks tests as fast (deselect with '-m "not fast"')

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["so_pip"]
line_length = 88
multi_line_output = 3
use_parentheses = true
