[project]
name = "whats_that_code"
version = "0.2.0"
description = "Guess programming language from a string or file."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" }]
keywords = ["language detection", "programming language detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyrankvote",
    "defusedxml",
    "pygments",
]

[project.urls]
Repository = "https://github.com/matthewdeanmartin/whats_that_code"
Homepage = "https://github.com/matthewdeanmartin/whats_that_code"
Documentation = "https://github.com/matthewdeanmartin/whats_that_code"
"Bug Tracker" = "https://github.com/matthewdeanmartin/whats_that_code/issues"
"Change Log" = "https://github.com/matthewdeanmartin/whats_that_code/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["whats_that_code"]
include = [
    "whats_that_code/**/*.py",
    "whats_that_code/**/*.md",
    "whats_that_code/**/*.txt",
    "whats_that_code/**/*.html",
    "whats_that_code/**/*.jinja",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov>=2.10.1",
    "pytest-timeout",
    "pytest-xdist>=2.1.0",
    "tox",
    "black",
    "isort",
    "pylint",
    "mypy",
    "bandit",
    "vulture",
    "jiggle-version>=2.1.0",
    "troml-dev-status>=0.6.0; python_version >= '3.9'",
    "dont-be-lazy>=0.1.2; python_version >= '3.10'",
    "pydoc-fork>=3.0.0; python_version >= '3.10'",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.pip]
universal = true
[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]
# don't know how to do this in toml
#addopts = "--strict-markers"
#markers =
#	slow: marks tests as slow (deselect with '-m "not slow"')
#	fast: marks tests as fast (deselect with '-m "not fast"')

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["so_pip"]
line_length = 88
multi_line_output = 3
use_parentheses = true

