[project]
name = "whats_that_code"
version = "0.3.0"
description = "Guess programming language from a string or file."
readme = "README.md"
authors = [{ name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" }]
keywords = ["language detection", "programming language detection"]
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pyrankvote>=2.0.0",
    "lxml>=5.0.0",
    "pygments>=2.20.0",
    # re2 powers the (linear-time, ~6x faster) regex marker matching — the
    # detector's hottest path. Results are identical to stdlib `re`; the code keeps
    # a defensive `re` fallback (whats_that_code/regex_based.py) so an install on a
    # platform without a re2 wheel still works, just slower.
    "google-re2>=1.1.0",
    # parser-based detection (spec/spec.md Phase 3). Opt-in via
    # Options(use_parsers=True): a clean parse is strong evidence for a language.
    # Without this extra the parser trick still works using only the stdlib validators
    # (python/json/xml/toml); installing it adds ~26 tree-sitter grammars.
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=1.0",
]




[project.urls]
Repository = "https://github.com/matthewdeanmartin/whats_that_code"
Documentation = "https://whats-that-code.readthedocs.io/en/latest/"
Changelog = "https://github.com/matthewdeanmartin/whats_that_code/blob/main/CHANGELOG.md"
homepage = "https://github.com/matthewdeanmartin/whats_that_code"
issues = "https://github.com/matthewdeanmartin/whats_that_code/issues"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["whats_that_code"]
include = [
    "whats_that_code/**/*.py",
    "whats_that_code/**/*.md",
    "whats_that_code/**/*.txt",
    "whats_that_code/**/*.html",
    "whats_that_code/**/*.jinja",
]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "LICENSE", "/whats_that_code", "/test"]

[dependency-groups]
dev = [
    "dont-be-lazy>=0.1.2",
    "pydoc-fork>=3.0.0",

    "bandit>=1.9.4",
    "black>=26.0.0",
    "isort>=6.0.0",
    "jiggle-version>=2.1.0",
    "codespell>=2.4.1",
    "mdformat>=1.0.0",
    "metametameta>=0.1.5",
    "mypy>=1.18.0",
    "lxml-stubs",
    "pylint[spelling]>=4.0.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-randomly>=3.15.0",
    "pytest-sugar>=0.9.7",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.4.0",
    "hypothesis>=6.100.0",
    "ruff>=0.12.0",
    "troml-dev-status>=0.6.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.7.0",
    "tox>=4.0",
    "tox-uv>=1.0",
    "gha-update>=0.1.0; python_version >= '3.12'",
    "pyyaml>=6.0",
    "yamlfix>=1.19.0",
    "interrogate>=1.5.0",
    "linkcheckmd>=1.4.0",
    "pyenchant>=3.2.2",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.26.0",
    "git2md>=0.1.0",
    "pyclean>=3.0.0",
    # dead code analysis (advisory)
    "vulture>=2.11",
    # the optional [fast] extra, so tests exercise the tree-sitter parser path
    # (google-re2 is a core dependency now, so it is already present)
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=1.0",
    "deadcode>=2.4.0",
    # API surface / doc checks
    "griffe>=1.0.0",
    "pydoclint>=0.8.0; python_version >= '3.10'",
    "pydoctest==0.2.1",
    # advisory / exploratory tools (standalone make targets, not quality gates)
    "refurb>=2.0.0; python_version >= '3.10'",
    "crosshair-tool>=0.0.80; python_version >= '3.10'",
    "deptry>=0.20.0",
    "import-linter>=2.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.pip]
universal = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["test"]
addopts = "-q --timeout=60"
norecursedirs = ["vendor", "scripts", "dist", "build"]
markers = [
    "slow: performance benchmarks (run with -m slow)",
    "integration: integration tests (run with -m integration)",
]
junit_family = "xunit1"

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 120
py_version = 311
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
packages = ["whats_that_code", "test"]

[[tool.mypy.overrides]]
module = "test.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["pygments", "pygments.*", "pyrankvote", "pyrankvote.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "B",   # bugbear
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",   # line too long (black handles this)
]

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["B011", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bandit]
exclude_dirs = ["test"]
skips = ["B101"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "except ImportError",
    "except ModuleNotFoundError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

[tool.importlinter]
root_packages = ["whats_that_code"]
